--- a/todo_app/app/views/templates/layout.html
+++ b/todo_app/app/views/templates/layout.html
@@ -8,9 +8,11 @@
   <link rel="stylesheet" href="/static/css/boostrap.min.css">
 </head>
 <body>
+  {‌{ template "navbar" }}
   <div class="container text-center">
     {{ template "content" .}}
-    </div>
+  </div>
+
 
 </body>
 <script src="/static/js/jquery-3.5.1.min.js"></script>
