--- a/todo_app/app/views/templates/layout.html
+++ b/todo_app/app/views/templates/layout.html
@@ -5,10 +5,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="/static/css/boostrap.min.css">
+  <title>SampleApp</title>
+  <link rel="stylesheet" href="static/css/bootstrap.min.css">
+  <link rel="stylesheet" href="static/css/form.css">
+
 </head>
 <body>
-  {‌{ template "navbar" }}
+  {{ template "navbar" }}
   <div class="container text-center">
     {{ template "content" .}}
   </div>
